--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 <title>19级计网2班---何宇轩的个人网站</title>
 <style type="text/css">
 body {
-	background-image: url(images/1002200.jpg);
+	background-image: url();
 }
 </style>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<p>嗨！大家好，欢迎来到我的个人网站。</p>
-<ul>
-  <li><a href="index.html">主页</a></li>
-  <li><a href="about.html">关于我</a></li>
-  <li><a href="photo.html">相册</a></li>
-  <li><a href="works.html">作品</a></li>
-  <li><a href="article.html">文章</a></li>
-  <li><a href="bbs.html">联系我</a></li>
-</ul>
+<header class="header">
+  <h1>19级计网2班何宇轩的个人网站</h1>
+</header>
+<main class="main">
+<nav class="navber"><a href="about.html" target="iframe">关于我</a><a href="photo.html" target="iframe">相册</a><a href="works.html" target="iframe">作品</a><a href="article.html" target="iframe">文章</a><a href="bbs.html" target="iframe">联系我</a></nav>
+  <section class="section">
+    <iframe src="about.html" name="iframe"></iframe>
+  </section>
+</main>
+<footer class="footer"><p>Copyright © 2020 Hyxsir. All rights reserved.</p></footer>
 </body>
 </html>
