--- a/works.html
+++ b/works.html
@@ -12,13 +12,6 @@ body {
 
 <body>
 <p>别问，问就是没有！</p>
-<ul>
-  <li><a href="index.html">主页</a></li>
-  <li><a href="about.html">关于我</a></li>
-  <li><a href="photo.html">相册</a></li>
-  <li><a href="works.html">作品</a></li>
-  <li><a href="article.html">文章</a></li>
-  <li><a href="bbs.html">联系我</a></li>
-</ul>
+<p><a href="zy1.html">第一次作品</a></p>
 </body>
 </html>
