--- a/about.html
+++ b/about.html
@@ -3,14 +3,31 @@
 <head>
 <meta charset="utf-8">
 <title>19级计网2班---何宇轩的个人网站</title>
-<style type="text/css">
-body {
-	background-image: url(images/1002200.jpg);
-}
-</style>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
-<p>这里没有我的信息（滑稽）。</p>
+<body class="yello">
+<table>
+  <tbody>
+    <tr>
+      <td colspan="2"><h3>关于我</h3></td>
+    </tr>
+    <tr>
+      <td width="389"><img src="../QQ图片2020051416061.jpg" width="370" height="415" alt=""/></td>
+      <td width="379" valign="top"><p><strong>姓名：</strong>何宇轩</p>
+      <p><strong>性别：</strong>男 </p>
+      <p><strong>年龄：</strong>17</p>
+      <p><strong>出生年月：</strong>2002.07.19</p>
+      <p><strong>毕业院校：</strong>天门中学分校</p>
+      <p><strong>所读专业：</strong>计算机网络技术</p>
+      <p><strong>最高学历：</strong>大专</p>
+      <p><strong>个人说明：</strong></p>
+      <p>我来自湖北省天门市，本人性格开朗、思维活跃，极富创造力，易于沟通，具有较好团队的意识。</p>
+      <p>尽力做好一件事，实乃人生之首务</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p></td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
