--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>19级计网2班---何宇轩的个人网站</title>
-<style type="text/css">
-body {
-	background-image: url();
-}
-</style>
+<title>19级计网2班----何宇轩的个人网站</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -16,11 +11,13 @@ body {
   <h1>19级计网2班何宇轩的个人网站</h1>
 </header>
 <main class="main">
-<nav class="navber"><a href="about.html" target="iframe">关于我</a><a href="photo.html" target="iframe">相册</a><a href="works.html" target="iframe">作品</a><a href="article.html" target="iframe">文章</a><a href="bbs.html" target="iframe">联系我</a></nav>
+  <nav class="navbar"><a href="about.html" target="iframe">关于</a><a href="photo.html" target="iframe">相册</a><a href="works.html" target="iframe">作品</a><a href="article.html" target="iframe">文章</a><a href="bbs.html" target="iframe">联系</a></nav>
   <section class="section">
-    <iframe src="about.html" name="iframe"></iframe>
+    <iframe src="about.html" name="iframe" scrolling="no"></iframe>
   </section>
 </main>
-<footer class="footer"><p>Copyright © 2020 Hyxsir. All rights reserved.</p></footer>
+<footer class="footer">
+  <p>Copyright © 2020 Hyxsir. All rights reserved.</p>
+</footer>
 </body>
 </html>
