--- a/works.html
+++ b/works.html
@@ -11,7 +11,6 @@ body {
 </head>
 
 <body>
-<p>别问，问就是没有！</p>
-<p><a href="zy1.html">第一次作品</a></p>
+<p><a href="zy1.html">第一次作业</a></p>
 </body>
 </html>
