--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <td colspan="2"><h3>关于我</h3></td>
     </tr>
     <tr>
-      <td width="389"><img src="../QQ图片2020051416061.jpg" width="370" height="415" alt=""/></td>
+      <td width="389"><img src="../Wdtp.jpg" width="370" height="415" alt=""/></td>
       <td width="379" valign="top"><p><strong>姓名：</strong>何宇轩</p>
       <p><strong>性别：</strong>男 </p>
       <p><strong>年龄：</strong>17</p>
